--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first web page</title>
 </head>
-<body>
+<body bgcolor="yellow">
    <!-- <h1>my first web page</h1>
    <p>this is my first paragraph</p>
    <h2>new heading</h2>
@@ -40,7 +40,7 @@
     <li><a href="register.html" target="fr3">Register Here</a></li>
     <li><a href="login.html" target="fr3">Login Here</a></li>
     <li><a href="profile.html" target="fr3">View Profile</a></li>
-    <li>AKTU</li>
+    <li><a href="timetable.html" target="fr3">Class Time Table</a></li>
     <li>ABES</li>
  </ul>
 <iframe name="fr3" width="400" height="400">
