--- a/HTML/index.html
+++ b/HTML/index.html
@@ -36,7 +36,7 @@
  <video controls width="200" height="200">
     <source src="../assets/video1.mp4">
  </video> -->
- <ul type="none">
+ <!-- <ul type="none">
     <li><a href="register.html" target="fr3">Register Here</a></li>
     <li><a href="login.html" target="fr3">Login Here</a></li>
     <li><a href="profile.html" target="fr3">View Profile</a></li>
@@ -44,6 +44,7 @@
     <li>ABES</li>
  </ul>
 <iframe name="fr3" width="400" height="400">
-    </iframe>
+    </iframe> -->
+    <script src="../JS/jsasync1.js"></script>
 </body>
 </html>
