--- a/REACT-CDN/index.html
+++ b/REACT-CDN/index.html
@@ -13,9 +13,15 @@
             height: 400px;
             padding: 20px;
             border-radius: 10px;
+            margin: auto;
+            display: block;
+            /* flex-direction: column; */
+            text-align: center;
+            /* justify-content: center; */
         }
         .booklist{
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-evenly;
         }
     </style>
@@ -25,8 +31,6 @@
    <div id="root">
 
    </div>
-   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-   <script src="index.js"></script>
+   <script type="text/babel" src="index.jsx"></script>
 </body>
 </html>
